noticed horizontal scroll, tried to fix

--- a/src/index.css
+++ b/src/index.css
@@ -16,5 +16,4 @@
 body {
   font-size: 1.6rem;
   background-color: #151515;
-  min-height: 100svh;
 }
